fix: change overflow

--- a/online-zoo/src/scss/components/_testimonials-card.scss
+++ b/online-zoo/src/scss/components/_testimonials-card.scss
@@ -56,7 +56,7 @@
     @include description;
     color: $color-gray;
     margin-top: 10px;
-    overflow: scroll;
+    overflow: hidden;
 }
 
 @media (max-width: 1400px) {
@@ -81,7 +81,6 @@
         height: 38px;
         margin-top: 10px;
         padding-left: 7px;
-        overflow: scroll;
     }
 }
 
